--- a/myapp/blog/templates/blog/post_list.html
+++ b/myapp/blog/templates/blog/post_list.html
@@ -24,7 +24,7 @@
             <tbody>
                 {% for post in posts %}
                     <tr>
-                        <td>1</td>
+                        <td>{{ post.pk }}</td>
                         <td><a href="{% url 'blog:detail' pk=post.pk %}">{{ post.title }}</a></td>
                         <td>{{ post.writer }}</td>
                         <td>{{ post.created_at }}</td>
